--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "antd": "^3.19.5",
+    "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
+    "babel-plugin-import": "^1.12.2",
     "dva": "^2.6.0-beta.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
